epic-free-games/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: epic-free-games
  namespace: epic-games-node
  labels:
    app: epic-free-games
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epic-free-games
  template:
    metadata:
      labels:
        app: epic-free-games
    spec:
      volumes:
        - name: config-vol
          configMap:
            name: epic-free-games-config
            defaultMode: 420
      containers:
        - name: epic-free-games
          image: ghcr.io/claabs/epicgames-freegames-node:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: config-vol
              mountPath: /usr/app/config/config.json
              subPath: account1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
