epic-free-games/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: epic-free-games
  namespace: epic-games-node
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`epic.mizar.scalar.cloud`)
      middlewares:
        - name: home-networks
          namespace: default
      priority: 10
      services:
        - name: epic-free-games
          kind: Service
          namespace: epic-games-node
          port: http
  tls:
    secretName: epic-free-games-tls
